# xrai

./: 404.html  CITATION.cff  README.md  bertopic1.py  classification.py  cv_fold.py  mkdocs.yml  mkdocs.yml.yaml  n-gramm distortions.py  plots.py  prediction.py  prepare.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: docs-publish2.yml  python-publish.yml
BasicUsage/: BasicUsage.ipynb  index.html
docs/: BasicUsage.ipynb
mkdocs/: base.yml
search/: search_index.json
src/: distortions_final.xlsx  setup.py
src/berTopic/: prediction.py
src/x-rai/: n-gramm distortions.py  plots.py  prediction.py
src/x_rai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/xrai/: Preparation.py  XRAI.py  __init__.py  cv_fold.py  fit_transform.py  plots.py  transform.py  utils.py
src/xrai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
