[project]
name = "x-rai"
version = "0.0.1"
authors = [
  { name="Christopher Lalk", email="clalk@example.com" },
]
description = "**XRAI (eXplanable Regression-based Artificial Intelligence)** is a package for the integration of regression-based machine-learning and eXplainable AI via the SHAP-package."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Psychology Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: Ongoing",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "featurewiz @ git+https://github.com/AutoViML/featurewiz.git@2fab4170382b698114935f7b0842f36ebcaa51c0",
    "gpboost==1.5.3",
    "matplotlib==3.9.2",
    "merf==1.0",
    "numpy==2.0.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "shap==0.46.0",
    "statistics==1.0.3.5",
    "xgboost==1.7.6",
    "XlsxWriter==3.2.0",
]

[project.optional-dependencies]
dev = [
    "numpy",
    "scikit-learn",
]

test = [
    "pytest",
    "hypothesis"
]
